CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(FpStrUtil)

IF(!FPSTRUTIL_VERSION)
    SET(FPSTRUTIL_VERSION 0)
ENDIF()

message(STATUS "VERSION : ${FPSTRUTIL_VERSION}")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
ADD_COMPILE_OPTIONS(-g3 -Wall -O3 -std=c++0x)
SET(CMAKE_BUILD_TYPE DEBUG)

#configure_file(version.cpp.in version.cpp)

INCLUDE_DIRECTORIES(
    ./
)

ADD_SUBDIRECTORY(test)