CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(FpStrUtil)

IF(!FPSTRUTIL_VERSION)
    SET(FPSTRUTIL_VERSION 0)
ENDIF()

string(TIMESTAMP BUILD_DATE "%Y-%m-%d %H:%M")

message(STATUS "VERSION    : ${FPSTRUTIL_VERSION}")
message(STATUS "BUILD_DATE : ${BUILD_DATE}")

ADD_COMPILE_OPTIONS(-g3 -Wall -O2 -fPIC)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
SET(CMAKE_BUILD_TYPE DEBUG)

INCLUDE(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup()
configure_file(version.cpp.in version.cpp)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
)

ADD_SUBDIRECTORY(test)